@@ -61,6 +61,7 @@ if [ $# = 0 ]; then
   echo " solrindex 	run the solr indexer on parsed batches"
   echo " solrdedup 	remove duplicates from solr"
   echo " parsechecker   check the parser for a given url"
+  echo " indexchecker   check the indexing filters for a given url"
   echo " plugin 	load a plugin and run one of its classes main()"
   echo " nutchserver    run a (local) Nutch server on a user defined port"
   echo " junit         	runs the given JUnit test"
@@ -210,6 +211,8 @@ elif [ "$COMMAND" = "solrdedup" ] ; then
 CLASS=org.apache.nutch.indexer.solr.SolrDeleteDuplicates
 elif [ "$COMMAND" = "parsechecker" ] ; then
   CLASS=org.apache.nutch.parse.ParserChecker
+elif [ "$COMMAND" = "indexchecker" ] ; then
+  CLASS=org.apache.nutch.indexer.IndexingFiltersChecker
 elif [ "$COMMAND" = "plugin" ] ; then
 CLASS=org.apache.nutch.plugin.PluginRepository
 elif [ "$COMMAND" = "nutchserver" ] ; then
